# shotcutplusplus

./: .clang-format  .clang-tidy  CMakeLists.txt
CuteLogger/: CMakeLists.txt  CuteLogger.pro
CuteLogger/include/: AbstractAppender.hpp  AbstractStringAppender.hpp  AndroidAppender.hpp  ConsoleAppender.hpp  CuteLogger_global.hpp  FileAppender.hpp  Logger.hpp  OutputDebugAppender.hpp  RollingFileAppender.hpp
CuteLogger/src/: AbstractAppender.cpp  AbstractStringAppender.cpp  AndroidAppender.cpp  ConsoleAppender.cpp  FileAppender.cpp  Logger.cpp  OutputDebugAppender.cpp  RollingFileAppender.cpp
src/: CMakeLists.txt  FlatpakWrapperGenerator.cpp  FlatpakWrapperGenerator.hpp  abstractproducerwidget.cpp  abstractproducerwidget.hpp  actions.cpp  actions.hpp  autosavefile.cpp  autosavefile.hpp  database.cpp  database.hpp  dataqueue.hpp  defaultlayouts.hpp  htmlgenerator.cpp  htmlgenerator.hpp  jobqueue.cpp  jobqueue.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mltcontroller.cpp  mltcontroller.hpp  mltxmlchecker.cpp  mltxmlchecker.hpp  openotherdialog.cpp  openotherdialog.hpp  player.cpp  player.hpp  proxymanager.cpp  proxymanager.hpp  scrubbar.cpp  scrubbar.hpp  settings.cpp  settings.hpp  sharedframe.cpp  sharedframe.hpp  shotcut_mlt_properties.hpp  transcoder.cpp  transcoder.hpp  transportcontrol.hpp  (+5 more)
src/commands/: filtercommands.cpp  filtercommands.h  filtercommands.hpp  markercommands.cpp  markercommands.h  markercommands.hpp  playlistcommands.cpp  playlistcommands.h  playlistcommands.hpp  subtitlecommands.cpp  subtitlecommands.h  subtitlecommands.hpp  timelinecommands.cpp  timelinecommands.h  timelinecommands.hpp  undohelper.cpp  undohelper.h  undohelper.hpp
src/controllers/: filtercontroller.cpp  filtercontroller.h  filtercontroller.hpp  scopecontroller.cpp  scopecontroller.h  scopecontroller.hpp
src/dialogs/: actionsdialog.cpp  actionsdialog.h  actionsdialog.hpp  addencodepresetdialog.cpp  addencodepresetdialog.hpp  alignaudiodialog.cpp  alignaudiodialog.h  alignaudiodialog.hpp  alignmentarray.cpp  alignmentarray.hpp  bitratedialog.cpp  bitratedialog.hpp  customprofiledialog.cpp  customprofiledialog.hpp  durationdialog.cpp  durationdialog.hpp  editmarkerdialog.cpp  editmarkerdialog.hpp  filedatedialog.cpp  filedatedialog.hpp  filedownloaddialog.cpp  longuitask.cpp  (+27 more)
(+281 files in other folders)
